--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
     <head>
         <title>Susie</title>
-        <link href="https://fonts.googleapis.com/css?family=Roboto|Wendy+One" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Knewave" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Coda+Caption:800" rel="stylesheet">
 
-        <link rel="stylesheet" type="text/css" href="index2.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
         <p>
-            <img height="200px" src="images/koma.jpg" align="right">
+            <img height="250px" src="images/koma.jpg" align="right">
         </p>
         <p>
-            <img height="200px" src="images/2.jpg" align="left">
+            <img height="250px" src="images/2.jpg" align="left">
         </p>
         <div id="Top" align="center">
         <h1>SUSIE</h1>
@@ -19,25 +21,34 @@
         <h3 id="sign">Do not go gentle into that good night.</h3>
         </div>
         <div id="NAME">
-            <p>NAME</p>
-            <p>Susie</p>
-            <p>Fujia Wu</p> 
+            <p align="center">NAME</p>
+            <p align="center">Susie/Fujia Wu</p> 
         </div>
         <div id="AGE">
-            <p>AGE</p>
-            <p>16</p>
+            <p align="center">AGE</p>
+            <p align="center">16</p>
         </div>
         <div id="HOMETOWN">
-            <p>HOMETOWN</p>
-            <p>Zhangjiagang</p>
+            <p align="center">HOMETOWN</p>
+            <p align="center">Zhangjiagang</p>
         </div>
-        <audio controls align="center">
-            <source src="music/zanka.mp3" type="audio/mpeg">
+        <audio controls align="center" id="music">
+            <source src="music/te.mp3" type="audio/mpeg">
         </audio>
-        <table>
+        <div id="hobby" align="center">
+            <h1>My Hobbies</h1>
+        </div>
+        <table id="animes">
             <tr>
-                <td><img height="200px" src="images/dr2" border="0"></td>
-                <td><img height="200px" src="images/sj" border="0"></td>
+                <td><a href="https://www.bilibili.com/bangumi/media/md5906"><img height="500px" src="images/dr2.jpg" border="0"></td>
+                <td><a href="https://www.bilibili.com/bangumi/media/md7752"><img height="500px" src="images/sj.jpg" border="0"></td>
+                <td><a href="https://www.bilibili.com/bangumi/media/md184"><img height="500px" src="images/ngnl.jpg" border="0"></td>
+                <td><a href="https://www.bilibili.com/bangumi/media/md1656"><img height="500px" src="images/drrr.jpg" border="0"></td>
+            </tr>
+        </table>
+        <table id="drama">
+            <tr>
+                <td><a href="https://www.bilibili.com/bangumi/media/md85652/?spm_id_from=666.10.bangumi_detail.1"><img height="500px" src="images/un.jpg" border="0"></td>
             </tr>
         </table>
 
@@ -49,7 +60,7 @@
             <p>About</p>
             <p>Photos</p>
             <p>Contant</p>
-        </div>
+            </div>
         	<li><h3>Q1:Which school are you from and which teacher I like best?</h3>
             A:I am from Jiangsu Liangfeng High School and my favourite teacher is my Maths teacher because I like Maths.</li>
         	<li><h3>Q2:What would you do when I feel stressed?</h3>
