--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </p>
         <div id="Top">
             <div id="Menu1">
-                <p>About me</p>
+                <a href="#right">About me</a>
                 <p>Gallery</p>
                 <p>Contant</p>
              </div>
