--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
 
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
@@ -17,32 +18,30 @@
         <p>
             <img height="250px" src="images/koma.jpg" align="right">
         </p>
-        <p>
-            <img height="250px" src="images/2.jpg" align="left">
-        </p>
+
         <div id="Top">
             <div id="Menu1">
-                <a href="#right">About me</a>
-                <a href="#gallery">Gallery</a>
-                <a href="#contant">Contant</a>
+                <a href="#right" class = "tabs">About me</a>
+                <a href="#gallery" class = "tabs">Gallery</a>
+                <a href="#contant" class = "tabs">Contant</a>
              </div>
-             <div id="Title" >
+             <div id="Title" align="center">
             <h1>SUSIE</h1>
             <h2>Welcome To My Home page!</h2>
             <h3 id="sign">Do not go gentle into that good night.</h3>
             </div>
         </div>
-        <div id="NAME">
-            <p align="center">NAME</p>
-            <p align="center">Susie/Fujia Wu</p> 
+            <div id="NAME" align="center">
+                <p>NAME</p>
+                <p class="name">Susie</p>
+            </div>
+        <div id="AGE" align="center">
+            <p>AGE</p>
+            <p class="age">16</p>
         </div>
-        <div id="AGE">
-            <p align="center">AGE</p>
-            <p align="center">16</p>
-        </div>
-        <div id="HOMETOWN">
-            <p align="center">HOMETOWN</p>
-            <p align="center">Zhangjiagang</p>
+        <div id="HOMETOWN" align="center">
+            <p>HOMETOWN</p>
+            <p class="hometown">Zhangjiagang</p>
         </div>
         <audio controls align="center" id="music">
             <source src="music/te.mp3" type="audio/mpeg">
@@ -50,21 +49,40 @@
         <div id="hobby" align="center">
             <h1>Recommendation</h1>
         </div>
+        <table id="book">
+            <tr>
+                <td><a href="https://book.douban.com/subject/3169746/"><img height="300px" src="images/bird.jpg" border="0"><h1 class="movieTitle">The<br>Thorn<br>Birds</h1></td>
+                <td><a href="https://book.douban.com/subject/27614904/"><img height="300px" src="images/fsq.jpeg" border="0"><h1 class="movieTitle">房思琪<br>的<br>初戀樂園</td>
+                <td><a href="https://book.douban.com/subject/27107109/"><img height="300px" src="images/100.jpg" border="0"><h1 class="movieTitle">One<br>Hundred<br>Years<br>of<br>Solitude</td>
+                <td><a href="https://book.douban.com/subject/4908885/"><img height="300px" src="images/jwr.jpg" border="0"><h1 class="movieTitle"> L'Etranger</td>
+                <td><a href="https://book.douban.com/subject/4908885/"><img height="300px" src="images/moon.jpg" border="0"><h1 class="movieTitle">The<br>Moon<br>And<br>Sixpence</td>
+            </tr>
+                <div class="small">
+                    <p>books</p>
+                </div>
+        </table>
         <table id="animes">
             <tr>
-                <td><a href="https://www.bilibili.com/bangumi/media/md5906"><img height="500px" src="images/dr2.jpg" border="0"><h1 class="movieTitle">Super Danganronpa 2.5</h1></td>
-                <td><a href="https://www.bilibili.com/bangumi/media/md7752"><img height="500px" src="images/sj.jpg" border="0"><h1 class="movieTitle">夜は短し歩けよ乙女</h1></td>
-                <td><a href="https://www.bilibili.com/bangumi/media/md184"><img height="500px" src="images/ngnl.jpg" border="0"><h1 class="movieTitle">No Game No Life</h1></td>
-                <td><a href="https://www.bilibili.com/bangumi/media/md1656"><img height="500px" src="images/drrr.jpg" border="0"><h1 class="movieTitle">Drrr</h1></td>
+                <td><a href="https://www.bilibili.com/bangumi/media/md5906"><img height="300px" src="images/dr2.jpg" border="0"><h1 class="movieTitle">Super<br>Dangan-<br>ronpa<br>2.5</h1></td>
+                <td><a href="https://www.bilibili.com/bangumi/media/md7752"><img height="300px" src="images/sj.jpg" border="0"><h1 class="movieTitle">夜は短し<br>歩けよ乙女</h1></td>
+                <td><a href="https://www.bilibili.com/bangumi/media/md184"><img height="300px" src="images/ngnl.jpg" border="0"><h1 class="movieTitle">No Game<br>No Life</h1></td>
+                <td><a href="https://www.bilibili.com/bangumi/media/md1656"><img height="300px" src="images/drrr.jpg" border="0"><h1 class="movieTitle">Drrr</h1></td>
             </tr>
+                <div class="small">
+                    <p>Animes</p>
+                </div>
         </table>
         <table id="drama">
             <tr>
-                <td><a href="https://www.bilibili.com/bangumi/media/md85652/?spm_id_from=666.10.bangumi_detail.1"><img height="500px" src="images/un.jpg" border="0"><h1 class="movieTitle">UNNATURAL</h1></td>
-                <td><a href="https://movie.douban.com/subject/6041817/"><img height="500px" src="images/wmdcz.jpg" border="0"><h1 class="movieTitle">僕等がいた</h1></td>
-                <td><a href="https://movie.douban.com/subject/26284956/"><img height="500px" src="images/mm.jpg" border="0"><h1 class="movieTitle">THE TOP SECRET</h1></td>
-                <td><a href="https://movie.douban.com/subject/25953663/"><img height="500px" src="images/frbrs.jpg" border="0"><h1 class="movieTitle">ウロボロス～この愛こそ、正義。</h1></td>
+                <td><a href="https://www.bilibili.com/bangumi/media/md85652/?spm_id_from=666.10.bangumi_detail.1"><img height="300px" src="images/un.jpg" border="0"><h1 class="movieTitle">UN-<br>NATURAL</h1></td>
+                <td><a href="https://movie.douban.com/subject/6041817/"><img height="300px" src="images/wmdcz.jpg" border="0"><h1 class="movieTitle">僕等がいた</h1></td>
+                <td><a href="https://movie.douban.com/subject/26284956/"><img height="300px" src="images/mm.jpg" border="0"><h1 class="movieTitle">THE<br>TOP<br>SECRET</h1></td>
+                <td><a href="https://movie.douban.com/subject/25953663/"><img height="300px" src="images/frbrs.jpg" border="0"><h1 class="movieTitle">ウロボロス～<br>この愛こそ、<br>正義。</h1></td>
+                <td><a href="https://movie.douban.com/subject/1388175/"><img height="300px" src="images/xqwy.jpg" border="0"><h1 class="movieTitle">下妻物语</h1></td>
             </tr>
+                <div class="small">
+                    <p>Movies</p>
+                </div>
         </table>
 
 
@@ -75,9 +93,9 @@
                 <div align="center" id="about">
                 <h2>ABOUT ME</h2>
                 </div>
-            <a href="#Title" align="right">Index</a>
-            <a href="#gallery">Gallery</a>
-            <a>Contant</a>
+            <a href="#Title" class="tabs1">Index</a>
+            <a href="#gallery" class="tabs1">Gallery</a>
+            <a href="contant" class="tabs1">Contant</a>
             </div>
             <div class = "col">
                 <div id="Q1" class="cell">
@@ -144,9 +162,9 @@
                 <div align="center" id="lit">
                 <h2>GALLERY</h2>
                 </div>
-            <a href="#Title">Index</a>
-            <a href="#right">About me</a>
-            <a href="#contant">Contant</a>
+            <a href="#Title" class="tabs1">Index</a>
+            <a href="#right" class="tabs1">About me</a>
+            <a href="#contant" class="tabs1">Contant</a>
             </div>
             <div class="photo">
                 <h3>Foods</h3>
@@ -231,18 +249,26 @@
             </div>
                     <td><img src="images/m1.jpg" width=15%></td>
                     <td><img src="images/m2.jpg" width=15%></td>
+                    <td><img src="images/m3.jpg" width=15%></td>
+
             <div class="photo">
                 <h3>Film</h3>
             </div>
                     <td><img src="images/l1.jpg" width=15%></td>
                     <td><img src="images/l2.jpg" width=15%></td>
+                    <td><img src="images/l3.jpg" width=15%></td>
+                    <td><img src="images/l4.jpg" width=15%></td>
+                    <td><img src="images/l5.jpg" width=15%></td>
+                    <td><img src="images/l6.jpg" width=15%></td>
+                    <td><img src="images/l7.jpg" width=15%></td>
+                    <td><img src="images/l8.jpg" width=15%></td>
              <div id="contant">
                 <div align="center" id="con">
-                <h2>Contant</h2>
+                <h2>Contact</h2>
                 </div>
-            <a href="#Title">Index</a>
-            <a href="#right">About me</a>
-            <a href="#gallery">Gallery</a>
+            <a href="#Title" class="tabs1">Index</a>
+            <a href="#right" class="tabs1">About me</a>
+            <a href="#gallery" class="tabs1">Gallery</a>
             </div>
             <div class="address">
                 <p>My email</p>
